// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/BottomNav Alert 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="bottom-nav"
    >
      <ul>
        <li>
          <a
            className=""
            href="#"
          >
            <div
              className="badge-wrapper"
            >
              <span
                className="bottom-nav-alert"
              />
            </div>
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-comment"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              messaggi
              <span
                className="sr-only"
              >
                - nuovo contenuto disponibile
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-camera"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              immagini
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <div
              className="badge-wrapper"
            >
              <span
                className="bottom-nav-alert"
              />
            </div>
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-file"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              documenti
              <span
                className="sr-only"
              >
                - nuovo contenuto disponibile
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-star-outline"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              preferiti
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-settings"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              preferenze
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/BottomNav Badge 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="bottom-nav"
    >
      <ul>
        <li>
          <a
            className=""
            href="#"
          >
            <div
              className="badge-wrapper"
            >
              <span
                className="bottom-nav-badge"
              >
                1
              </span>
            </div>
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-comment"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              messaggi
              <span
                className="sr-only"
              >
                - 1 da leggere
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            className="active"
            href="#"
          >
            <div
              className="badge-wrapper"
            >
              <span
                className="bottom-nav-badge"
              >
                2
              </span>
            </div>
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-camera"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              immagini
              <span
                className="sr-only"
              >
                - 2 da vedere
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <div
              className="badge-wrapper"
            >
              <span
                className="bottom-nav-badge"
              >
                88
              </span>
            </div>
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-file"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              documenti
              <span
                className="sr-only"
              >
                - 88 da esaminare
              </span>
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-star-outline"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              preferiti
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-settings"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              preferenze
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/BottomNav Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="bottom-nav"
    >
      <ul>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-comment"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              messaggi
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-camera"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              immagini
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="#"
          >
            <svg
              className="icon"
            >
              <use
                href="sprite.svg#it-file"
              />
            </svg>
            <span
              className="bottom-nav-label"
            >
              documenti
              <span
                className="sr-only"
              />
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
